# Udacity_Sensor_Fusion_Nanodegree

SFND_Camera/lidar_to_camera/lidar_to_camera/: CMakeLists.txt
SFND_Camera/lidar_to_camera/lidar_to_camera/src/: Jaguar2015XE (ROS2 Bridge)_alt.yaml  dataStructures.h  project_lidar_to_camera.cpp  project_lidar_to_camera_old.cpp  project_test.cpp  show_lidar_top_view.cpp  structIO.cpp
SFND_Camera/lidar_to_camera/lidar_to_camera/test_data/: lidar13.pcd  lidar3.pcd  lidar_far.pcd  lidar_new.pcd  test.pcd  test_with_durak.pcd
